--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -16,29 +16,29 @@
 <body id="index">
     <div class="main-grid">
     <a href="#pop-products" class="skip-link">Hopp til hovedinnholdet</a>
-    <header id="global-header">
+    <header id="global-header" role="banner">
         <form>
             <label>
                 <input type="search" placeholder="søk her">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </label>
          </form>
-        <nav>
-            <a href="index.html">Hjem</a>
-            <a href="index.html#pop-products">Produkter</a>
-            <a href="index.html" id="logo">
-                <img src="css/ressurser/koala.jpg" alt="logo til nettsiden. en tegnet koala som sitter i et tre. treet har to greiner"></a>
-            <a href="index.html#pop-categories">Kategorier</a>
-            <a href="index.html#global-footer">Kontakt oss</a>
+        <nav aria-label="Hovedmeny">
+            <a href="index.html" aria-current="side">Hjem</a>
+            <a href="index.html#pop-products" aria-current="side">Produkter</a>
+            <a href="index.html" id="logo" aria-label="Organisasjonen sin logo">
+                <img src="css/ressurser/koala.jpg" alt="logo til nettsiden. en tegnet koala som sitter i et tre. treet har to greiner" ></a>
+            <a href="index.html#pop-categories" aria-current="side">Kategorier</a>
+            <a href="index.html#global-footer" aria-current="side">Kontakt oss</a>
         </nav>
         <ul>
-            <li><a href="#"><i class="fa-solid fa-user-large"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
-            <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-user-large" aria-label="figurprofil"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-heart" aria-label="favorithjerte"></i></a></li>
+            <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping" aria-label="handlekurv ikon"></i></a></li>
         </ul>
     </header>
 
-    <main>
+    <main role="main">
         <div class="slide-container">
             <button class="slider-arrow left-arrow">&#10094;</button> 
             <section class="slides">
@@ -277,7 +277,7 @@
 
     <footer id="global-footer">
         <section class="top">
-            <img src="css/ressurser/koala.jpg" alt="mini versjon av logoen fra toppen">
+            <img src="css/ressurser/koala.jpg" alt="" aria-hidden="true">
             <p>Mauris non urna aliquet, volutpat dui eu, tincidunt ex. Nulla fermentum malesuada facilisis. Pellentesque placerat et nisl id fringilla.</p>
         </section>
         <section class="information">
