--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -273,7 +273,9 @@
                         </figure>        
             </section>
         </div>
+        <a href="index.html#index" id="back-to-top" aria-label="back to top button"><i class="fa-solid fa-arrow-up"></i></a>
     </main>
+    
 
     <footer id="global-footer">
         <section class="top">
