--- a/Eksamensmappa/product.html
+++ b/Eksamensmappa/product.html
@@ -145,7 +145,8 @@
                 </article>
             </section>
         </section>
-            </section>
+        </section>
+            <a href="product.html" id="back-to-top" aria-label="back to top button"><i class="fa-solid fa-arrow-up"></i></a>
         
         </main>
     
@@ -284,7 +285,7 @@
             <ul>
                 <li><a href="index.html#categories">Kategorier</a></li>
                 <li><a href="product.html">Produkter</a></li>
-                <li><a href="index.html#contact">Kontakt oss</a></li>
+                <li><a href="product.html#contact">Kontakt oss</a></li>
                 <li><a href="WCAG.xlsx">Tilgjengelighetserklæring</a></li>
             </ul>
         </section>
