--- a/Eksamensmappa/index.html
+++ b/Eksamensmappa/index.html
@@ -24,12 +24,12 @@
             </label>
          </form>
         <nav aria-label="Hovedmeny">
-            <a href="index.html" aria-current="side">Hjem</a>
-            <a href="index.html#pop-products" aria-current="side">Produkter</a>
+            <a href="index.html" aria-label="naaverende side">Hjem</a>
+            <a href="index.html#pop-products">Produkter</a>
             <a href="index.html" id="logo" aria-label="Organisasjonen sin logo">
                 <img src="css/ressurser/koala.jpg" alt="logo til nettsiden. en tegnet koala som sitter i et tre. treet har to greiner" ></a>
-            <a href="index.html#pop-categories" aria-current="side">Kategorier</a>
-            <a href="index.html#global-footer" aria-current="side">Kontakt oss</a>
+            <a href="index.html#pop-categories">Kategorier</a>
+            <a href="index.html#global-footer">Kontakt oss</a>
         </nav>
         <ul>
             <li><a href="#"><i class="fa-solid fa-user-large" aria-label="figurprofil"></i></a></li>
