--- a/Eksamensmappa/product.html
+++ b/Eksamensmappa/product.html
@@ -28,7 +28,7 @@
                 <a href="index.html" id="logo">
                     <img src="css/ressurser/koala.jpg" alt="logo til nettsiden. en tegnet koala som sitter i et tre. treet har to greiner"></a>
                 <a href="index.html#pop-categories">Kategorier</a>
-                <a href="product.html#global-footer" aria-current="side">Kontakt oss</a>
+                <a href="product.html#global-footer">Kontakt oss</a>
             </nav>
             <ul>
                 <li><a href="#"><i class="fa-solid fa-user-large" aria-label="figurprofil"></i></a></li>
