--- a/Eksamensmappa/checkout.html
+++ b/Eksamensmappa/checkout.html
@@ -287,7 +287,7 @@
         
                     <section class="date-or-cvc">
                     <label for="CVC">CVC/CVV</label>
-                    <input type="number" id="CVC" placeholder=" CVC/CVV" minlength="2" required aria-required="true">
+                    <input type="number" id="CVC" placeholder=" CVC/CVV" required aria-required="true">
                     <span class="error-message">Vennligst fyll inn et gyldig CVC eller CVV nummer. Eksempel: 123</span>
                 </section>
                 </section>
